# python-discord-message-dumper

./: README.md  bot.py  pyproject.toml
